# Smart-Donkey

./: .gitignore  example.env  mydatabase.db  pyproject.toml
src/: __main__.py  error_handler.py  utils.py
src/gpt_assistant/: __init__.py  _defaults.py  _logger.py  checkers.py
src/gpt_assistant/crud/: chats.py  config.py  messages.py
src/smart_donkey/: _defaults.py  _logger.py  _settings.py  checkers.py
src/smart_donkey/crud/: access.py  chats.py  config.py  messages.py  users.py
src/smart_donkey/db/: __init__.py  models.py  session.py
