[project]
name = "TG-GPT-Assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "M. logique",email = "logique@duck.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "g4f[all] (>=0.4.8.6,<0.5.0.0)",
    "telebot (>=0.0.5,<0.0.6)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pytz (>=2025.1,<2026.0)"
]

[tool.poetry]
packages = [{include = "gpt_assistant", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
